--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
-  "name": "chat-app",
+  "name": "collabwell",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A comprehensive team collaboration platform with real-time messaging, workspace management, financial tracking, and team challenges.",
+  "main": "backend/src/index.js",
   "scripts": {
-    "build":"npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start":"npm run start --prefix backend"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend",
+    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
+    "install-deps": "npm install --prefix backend && npm install --prefix frontend"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "collaboration",
+    "chat",
+    "workspace",
+    "finance",
+    "team-management",
+    "real-time",
+    "react",
+    "nodejs"
+  ],
+  "author": "Akshara Amirtharaj",
   "license": "ISC",
-  "description": ""
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
